[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/UI/bg.png" type="Texture" id=1]
[ext_resource path="res://scripts/settings.gd" type="Script" id=2]

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 215.0
margin_top = 101.0
margin_right = 264.0
margin_bottom = 169.0

[node name="audio" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 49.0
margin_bottom = 20.0
text = "Audio"

[node name="video" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 49.0
margin_bottom = 44.0
text = "visual"

[node name="back" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 49.0
margin_bottom = 68.0
text = "back"

[connection signal="pressed" from="CenterContainer/VBoxContainer/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
